--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "satRday MyCity"
+  title: "satRday MyCity 2026"
   sidebar: false
   navbar:
     background: light
